# setuav

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  qml.qrc  resources.qrc  setup.bat  setup.sh
Docs/: SoftwareDesignDocument.md
Docs/content/: Diagrams.drawio
Source/Application/: ApplicationWindow.cpp  ApplicationWindow.hpp  CMakeLists.txt  Setuav.cpp  Setuav.hpp  Window.cpp  Window.hpp  main.cpp
Source/Application/Geometry/: Editor.cpp  Editor.hpp  Geom_Editor.cpp  Geom_Editor.hpp  Geom_Viewer.cpp  Geom_Viewer.hpp  Viewer.cpp  Viewer.hpp
Source/Application/UI/MainWindow/: AirframeMenu.cpp  AirframeMenu.hpp  MainWindow.cpp  MainWindow.hpp  PerformanceMenu.cpp  PerformanceMenu.hpp  PropulsionMenu.cpp  PropulsionMenu.hpp  Sidebar.cpp  Sidebar.hpp  Topbar.cpp  Topbar.hpp
Source/Core/: CMakeLists.txt
Source/Core/Model/: Airfoil.hpp  Airframe.hpp  Naca4.hpp  Uav.cpp  Uav.hpp  Wing.hpp
Source/Model/: CMakeLists.txt
Source/Model/Airframe/: Airframe.h  Copter.h  Plane.h
Source/Model/Battery/: Battery.h  BatteryCell.h
Source/Model/Wing/: Wing.h  WingSection.h
docs/: Copilot.md  SoftwareDesignDocument.md
src/: Airframe.qml  Main.qml  Performance.qml  Propulsion.qml  Setuav.cpp  Setuav.h  Setuav.hpp  TopBar.qml  main.cpp
src/Airframe/: Airfoil.hpp  Airframe.cpp  Airframe.hpp  FixedWing.cpp  FixedWing.hpp  Naca4.cpp  Naca4.hpp  Wing.cpp  Wing.hpp
src/App/: OcctView.cpp  OcctView.hpp  Setuav.cpp  Setuav.hpp
src/App/gui/: Gui.cpp  Gui.hpp  Sidebar.cpp  Sidebar.hpp  Topbar.cpp  Topbar.hpp
src/App/occt/: Geometry.cpp  Geometry.hpp  OcctView.cpp  OcctView.hpp
tests/: main.cpp
